@@ -1,5 +1,10 @@
 2012-01-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* configure.ac, src/interp/macros.lisp,
+	src/interp/vmlisp.lisp: Minor cleanups.
+
+2012-01-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/nlib.lisp: Fix build with GCL broken
 	in last commit.
 
